--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jhordan.euro_cleanarchitecture">
 
-
+  <uses-permission android:name="android.permission.INTERNET"/>
   <application
+      android:name=".EuroApplication"
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
-      android:name=".EuroApplication"
       android:largeHeap="true"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
     <activity
-        android:name=".view.ScrollingActivity"
+        android:name=".view.activity.TeamsActivity"
         android:label="@string/app_name"
         android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
-
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
