setup the project for write the tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ android {
     targetSdkVersion 23
     versionCode 1
     versionName "1.0"
+    multiDexEnabled true
+    testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
   }
   buildTypes {
     release {
@@ -23,13 +25,10 @@ android {
   packagingOptions {
     exclude 'META-INF/services/javax.annotation.processing.Processor'
   }
-
-
 }
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
-  testCompile 'junit:junit:4.12'
 
   //Dependencies
 
@@ -41,14 +40,43 @@ dependencies {
 
   compile daggerDependencies.dagger
   compile daggerDependencies.daggerCompiler
-  apt     daggerDependencies.daggerAnnotations
+  apt daggerDependencies.daggerAnnotations
 
   compile rxDependencies.rxJava
   compile rxDependencies.rxAndroid
 
-  compile glide
+  compile picasso
   compile butterknife
   compile circleImageView
 
-  compile 'com.squareup.picasso:picasso:2.5.2'
+  //Testing
+
+  testCompile testingDependencies.junit
+  testCompile testingDependencies.mockito
+  testCompile testingDependencies.hamcrest
+
+  // Android Testing Support Library's runner and rules
+
+  androidTestCompile testingSupportLibraryDependencies.runner
+  androidTestCompile testingSupportLibraryDependencies.rules
+
+  // Espresso UI Testing dependencies.
+
+  androidTestCompile testingEspressoDependencies.espressoCore
+  // androidTestCompile testingEspressoDependencies.espressoContrib
+  androidTestCompile testingEspressoDependencies.espressoIntents
+
+  androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.1') {
+    exclude module: 'support-annotations'
+    exclude module: 'support-v4'
+    exclude module: 'support-v13'
+    exclude module: 'recyclerview-v7'
+  }
+  /*
+       Resolves dependency versions across test and production APKs, specifically, transitive
+       dependencies. This is required since Espresso internally has a dependency on support-annotations.
+   */
+}
+configurations.all {
+  resolutionStrategy.force "com.android.support:support-annotations:23.1.1"
 }
