--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-*.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 /captures
+**.iml
+/.idea
+sdcard
+sdcard.lock
+libs/
