--- a/gradle-scripts/dependencies.gradle
+++ b/gradle-scripts/dependencies.gradle
@@ -1,13 +1,18 @@
 ext {
     //Version
-    supportVersion = '24.1.0'
+    supportVersion = '25.3.1'
+
     retrofitVersion = '2.0.1'
+
     rxJavaVersion = '1.1.0'
     rxAndroidVersion = '1.1.0'
+
     circleImageVersion = '1.3.0'
     butterknifeVersion = '7.0.1'
+
     picassoVersion = '2.5.2'
     daggerVersion = '2.0.2'
+
     glassFishVersion = '10.0-b28'
 
     junitVersion = '4.12'
@@ -39,12 +44,8 @@ ext {
     //Support Libraries dependencies
     supportDependencies = [
             design           : buildDependency(supportPackage, 'design', supportVersion),
-            recyclerView     : buildDependency(supportPackage, 'recyclerview-v7', supportVersion),
-            cardView         : buildDependency(supportPackage, 'cardview-v7', supportVersion),
             appCompat        : buildDependency(supportPackage, 'appcompat-v7', supportVersion),
-            supportAnnotation: buildDependency(supportPackage, 'support-annotations', supportVersion),
-            palette          : buildDependency(supportPackage, 'palette-v7', supportVersion),
-            percent          : buildDependency(supportPackage, 'percent', supportVersion)
+            supportAnnotation: buildDependency(supportPackage, 'support-annotations', supportVersion)
     ]
 
     //Retrofit Libraries dependencies
@@ -80,21 +81,8 @@ ext {
             robolectric : buildDependency(robolectricPackage, 'robolectric',   robolectricVersion),
             hamcrest    : buildDependency(hamcrestPackage, 'hamcrest-library',   hamcrestVersion)
     ]
-
-    testingSupportLibraryDependencies = [
-            runner : buildDependency(testPackage, 'runner', testVersion),
-            rules  : buildDependency(testPackage, 'rules', testVersion)
-
-    ]
-
-    testingEspressoDependencies  = [
-            espressoCore     :buildDependency(testEspressoPackage, 'espresso-core', testEspressoVersion),
-            espressoContrib  :buildDependency(testEspressoPackage, 'espresso-contrib', testEspressoVersion),
-            espressoIntents  :buildDependency(testEspressoPackage, 'espresso-intents', testEspressoVersion)
-    ]
-
 }
 
-String buildDependency(String pack, String dependency, String version) {
+static String buildDependency(String pack, String dependency, String version) {
     return "${pack}:${dependency}:${version}"
 }
