--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,18 @@ allprojects {
   repositories {
     jcenter()
   }
+
+
+  apply plugin: 'checkstyle'
+
+  task checkstyle(type: Checkstyle) {
+    configFile file("${project.rootDir}/config/checkstyle.xml")
+    source 'src'
+    include '**/*.java'
+    exclude '**/gen/**'
+
+    classpath = files()
+  }
 }
 
 task clean(type: Delete) {
