--- a/gradle-scripts/dependencies.gradle
+++ b/gradle-scripts/dependencies.gradle
@@ -1,88 +1,83 @@
 ext {
-    //Version
-    supportVersion = '25.3.1'
 
-    retrofitVersion = '2.0.1'
+  //Version
+  supportVersion = '25.3.1'
 
-    rxJavaVersion = '1.1.0'
-    rxAndroidVersion = '1.1.0'
+  retrofitVersion = '2.0.1'
 
-    circleImageVersion = '1.3.0'
-    butterknifeVersion = '7.0.1'
+  rxJavaVersion = '1.1.0'
+  rxAndroidVersion = '1.1.0'
 
-    picassoVersion = '2.5.2'
-    daggerVersion = '2.0.2'
+  circleImageVersion = '1.3.0'
+  butterknifeVersion = '7.0.1'
 
-    glassFishVersion = '10.0-b28'
+  picassoVersion = '2.5.2'
+  daggerVersion = '2.0.2'
 
-    junitVersion = '4.12'
-    mockitoVersion = '1.10.19'
-    robolectricVersion = '3.0'
-    hamcrestVersion = '1.1'
+  glassFishVersion = '10.0-b28'
 
-    testVersion = '0.4.1'
-    testEspressoVersion = '2.2.1'
+  junitVersion = '4.12'
+  mockitoVersion = '1.10.19'
+  hamcrestVersion = '1.1'
+  robolectricVersion = '3.0'
 
-    //Packages
-    supportPackage = 'com.android.support'
-    retrofitPackage = 'com.squareup.retrofit2'
-    okHttpPackage = 'com.squareup.okhttp3'
-    reactivePackage = 'io.reactivex'
-    hdodenhofPackage = 'de.hdodenhof'
-    jakeWhartonPackage = 'com.jakewharton'
-    picassoPackage = 'com.squareup.picasso'
-    daggerPackage = 'com.google.dagger'
-    glassFishPackage = 'org.glassfish'
-    junitPackage = 'junit'
-    mockitoPackage = 'org.mockito'
-    robolectricPackage = 'org.robolectric'
-    hamcrestPackage = 'org.hamcrest'
+  //Packages
+  supportPackage = 'com.android.support'
 
-    testPackage = 'com.android.support.test'
-    testEspressoPackage = 'com.android.support.test.espresso'
+  retrofitPackage = 'com.squareup.retrofit2'
+  okHttpPackage = 'com.squareup.okhttp3'
 
-    //Support Libraries dependencies
-    supportDependencies = [
-            design           : buildDependency(supportPackage, 'design', supportVersion),
-            appCompat        : buildDependency(supportPackage, 'appcompat-v7', supportVersion),
-            supportAnnotation: buildDependency(supportPackage, 'support-annotations', supportVersion)
-    ]
+  reactivePackage = 'io.reactivex'
 
-    //Retrofit Libraries dependencies
-    retrofitDependencies = [
-            retrofit: buildDependency(retrofitPackage, 'retrofit', retrofitVersion),
-            gson    : buildDependency(retrofitPackage, 'converter-gson', retrofitVersion),
-            rxJava  : buildDependency(retrofitPackage, 'adapter-rxjava', retrofitVersion),
-            loggingInterceptor : buildDependency(okHttpPackage, 'logging-interceptor', '3.0.0-RC1')
-    ]
+  hdodenhofPackage = 'de.hdodenhof'
+  jakeWhartonPackage = 'com.jakewharton'
+  picassoPackage = 'com.squareup.picasso'
+  daggerPackage = 'com.google.dagger'
+  glassFishPackage = 'org.glassfish'
 
-    //RX Libraries dependencies
-    rxDependencies = [
-            rxJava   : buildDependency(reactivePackage, 'rxjava', rxJavaVersion),
-            rxAndroid: buildDependency(reactivePackage, 'rxandroid', rxAndroidVersion)
-    ]
+  junitPackage = 'junit'
+  mockitoPackage = 'org.mockito'
+  hamcrestPackage = 'org.hamcrest'
+  robolectricPackage = 'org.robolectric'
 
-    //Dagger Libraries dependencies
-    daggerDependencies = [
-        dagger             : buildDependency(daggerPackage,'dagger',daggerVersion),
-        daggerCompiler     : buildDependency(daggerPackage,'dagger-compiler',daggerVersion),
-        daggerAnnotations  : buildDependency(glassFishPackage,'javax.annotation',glassFishVersion)
-    ]
 
-    //General Libraries dependencies
-    circleImageView = buildDependency(hdodenhofPackage, 'circleimageview', circleImageVersion)
-    butterknife = buildDependency(jakeWhartonPackage, 'butterknife', butterknifeVersion)
-    picasso = buildDependency(picassoPackage, 'picasso', picassoVersion)
+  //Support Libraries dependencies
+  supportDependencies = [
+      design           : buildDependency(supportPackage, 'design', supportVersion),
+      appCompat        : buildDependency(supportPackage, 'appcompat-v7', supportVersion),
+      supportAnnotation: buildDependency(supportPackage, 'support-annotations', supportVersion)]
 
-    //Testing
-    testingDependencies = [
-            junit       : buildDependency(junitPackage, 'junit', junitVersion),
-            mockito     : buildDependency(mockitoPackage, 'mockito-core', mockitoVersion),
-            robolectric : buildDependency(robolectricPackage, 'robolectric',   robolectricVersion),
-            hamcrest    : buildDependency(hamcrestPackage, 'hamcrest-library',   hamcrestVersion)
-    ]
+  //Retrofit Libraries dependencies
+  retrofitDependencies = [
+      retrofit          : buildDependency(retrofitPackage, 'retrofit', retrofitVersion),
+      gson              : buildDependency(retrofitPackage, 'converter-gson', retrofitVersion),
+      rxJava            : buildDependency(retrofitPackage, 'adapter-rxjava', retrofitVersion),
+      loggingInterceptor: buildDependency(okHttpPackage, 'logging-interceptor', '3.0.0-RC1')]
+
+  //RX Libraries dependencies
+  rxDependencies = [
+      rxJava   : buildDependency(reactivePackage, 'rxjava', rxJavaVersion),
+      rxAndroid: buildDependency(reactivePackage, 'rxandroid', rxAndroidVersion)]
+
+  //Dagger Libraries dependencies
+  daggerDependencies = [
+      dagger           : buildDependency(daggerPackage, 'dagger', daggerVersion),
+      daggerCompiler   : buildDependency(daggerPackage, 'dagger-compiler', daggerVersion),
+      daggerAnnotations: buildDependency(glassFishPackage, 'javax.annotation', glassFishVersion)]
+
+  //General Libraries dependencies
+  circleImageView = buildDependency(hdodenhofPackage, 'circleimageview', circleImageVersion)
+  butterknife = buildDependency(jakeWhartonPackage, 'butterknife', butterknifeVersion)
+  picasso = buildDependency(picassoPackage, 'picasso', picassoVersion)
+
+  //Testing
+  testingDependencies = [
+      junit      : buildDependency(junitPackage, 'junit', junitVersion),
+      mockito    : buildDependency(mockitoPackage, 'mockito-core', mockitoVersion),
+      robolectric: buildDependency(robolectricPackage, 'robolectric', robolectricVersion),
+      hamcrest   : buildDependency(hamcrestPackage, 'hamcrest-library', hamcrestVersion)]
 }
 
 static String buildDependency(String pack, String dependency, String version) {
-    return "${pack}:${dependency}:${version}"
+  return "${pack}:${dependency}:${version}"
 }
