--- a/gradle-scripts/dependencies.gradle
+++ b/gradle-scripts/dependencies.gradle
@@ -3,56 +3,46 @@ ext {
   //Version
   supportVersion = '25.3.1'
 
-  retrofitVersion = '2.0.1'
-
   rxJavaVersion = '1.1.0'
   rxAndroidVersion = '1.1.0'
 
   circleImageVersion = '1.3.0'
-  butterknifeVersion = '7.0.1'
+  butterknifeVersion = '8.4.0'
 
   picassoVersion = '2.5.2'
-  daggerVersion = '2.0.2'
+  daggerVersion = '2.8'
 
-  glassFishVersion = '10.0-b28'
+  javaxVersion = '1.0'
 
   junitVersion = '4.12'
   mockitoVersion = '1.10.19'
   hamcrestVersion = '1.1'
   robolectricVersion = '3.0'
+  gsonVersion = '2.8.0'
 
   //Packages
   supportPackage = 'com.android.support'
-
-  retrofitPackage = 'com.squareup.retrofit2'
-  okHttpPackage = 'com.squareup.okhttp3'
 
   reactivePackage = 'io.reactivex'
 
   hdodenhofPackage = 'de.hdodenhof'
   jakeWhartonPackage = 'com.jakewharton'
   picassoPackage = 'com.squareup.picasso'
+
   daggerPackage = 'com.google.dagger'
-  glassFishPackage = 'org.glassfish'
+  javaxPackage = 'javax.annotation'
+  gsonPackage = 'com.google.code.gson'
 
   junitPackage = 'junit'
   mockitoPackage = 'org.mockito'
   hamcrestPackage = 'org.hamcrest'
   robolectricPackage = 'org.robolectric'
 
-
   //Support Libraries dependencies
   supportDependencies = [
       design           : buildDependency(supportPackage, 'design', supportVersion),
       appCompat        : buildDependency(supportPackage, 'appcompat-v7', supportVersion),
       supportAnnotation: buildDependency(supportPackage, 'support-annotations', supportVersion)]
-
-  //Retrofit Libraries dependencies
-  retrofitDependencies = [
-      retrofit          : buildDependency(retrofitPackage, 'retrofit', retrofitVersion),
-      gson              : buildDependency(retrofitPackage, 'converter-gson', retrofitVersion),
-      rxJava            : buildDependency(retrofitPackage, 'adapter-rxjava', retrofitVersion),
-      loggingInterceptor: buildDependency(okHttpPackage, 'logging-interceptor', '3.0.0-RC1')]
 
   //RX Libraries dependencies
   rxDependencies = [
@@ -63,12 +53,17 @@ ext {
   daggerDependencies = [
       dagger           : buildDependency(daggerPackage, 'dagger', daggerVersion),
       daggerCompiler   : buildDependency(daggerPackage, 'dagger-compiler', daggerVersion),
-      daggerAnnotations: buildDependency(glassFishPackage, 'javax.annotation', glassFishVersion)]
+      daggerAnnotations: buildDependency(javaxPackage, 'jsr250-api', javaxVersion)]
 
-  //General Libraries dependencies
+
+
+  //Elemental Libraries dependencies
   circleImageView = buildDependency(hdodenhofPackage, 'circleimageview', circleImageVersion)
   butterknife = buildDependency(jakeWhartonPackage, 'butterknife', butterknifeVersion)
+  butterknifeProcessor = buildDependency(jakeWhartonPackage, 'butterknife-compiler', butterknifeVersion)
   picasso = buildDependency(picassoPackage, 'picasso', picassoVersion)
+  gson = buildDependency(gsonPackage, 'gson', gsonVersion)
+
 
   //Testing
   testingDependencies = [
