--- a/gradle-scripts/dependencies.gradle
+++ b/gradle-scripts/dependencies.gradle
@@ -3,8 +3,8 @@ ext {
   //Version
   supportVersion = '25.3.1'
 
-  rxJavaVersion = '1.1.0'
-  rxAndroidVersion = '1.1.0'
+  rxJavaVersion = '2.0.2'
+  rxAndroidVersion = '2.0.1'
 
   circleImageVersion = '1.3.0'
   butterknifeVersion = '8.4.0'
@@ -23,7 +23,7 @@ ext {
   //Packages
   supportPackage = 'com.android.support'
 
-  reactivePackage = 'io.reactivex'
+  reactivePackage = 'io.reactivex.rxjava2'
 
   hdodenhofPackage = 'de.hdodenhof'
   jakeWhartonPackage = 'com.jakewharton'
