--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,9 @@ dependencies {
 
   compile circleImageView
   compile picasso
-  compile gson
+  compile (gson){
+    exclude group: 'org.hamcrest', module: 'hamcrest-core'
+  }
 
   //Testing
   compile testingDependencies.junit
