--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,13 @@ android {
     exclude 'META-INF/LICENSE.txt'
   }
 
+  dexOptions {
+    preDexLibraries true
+    javaMaxHeapSize "3g"
+    incremental true
+    dexInProcess = true
+  }
+
   configurations {
     all*.exclude group: 'org.hamcrest', module: 'hamcrest-core'
   }
