--- a/gradle-scripts/dependencies.gradle
+++ b/gradle-scripts/dependencies.gradle
@@ -1,7 +1,7 @@
 ext {
 
   //Version
-  supportVersion = '25.3.1'
+  supportVersion = '26+'
 
   rxJavaVersion = '2.0.2'
   rxAndroidVersion = '2.0.1'
