--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ env:
 android:
   components:
      - tools
-     - build-tools-25.0.2
+     - build-tools-26.0.2
      - platform-tools
      - extra-android-m2repository
      - extra-google-android-support
-     - android-25
+     - android-26
 
 licenses:
     - 'android-sdk-preview-license-.+'
@@ -20,5 +20,4 @@ licenses:
     - 'google-gdk-license-.+'
 
 script:
-  - ./gradlew clean
-  - ./gradlew checkstyle assemble testDebug --stacktrace
+  - ./gradlew checkstyle assemble testDebug
