--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,16 @@ jdk: oraclejdk8
 
 env:
   global:
-    - ADB_INSTALL_TIMEOUT=8 # 8 minutes (2 minutes by default)
+    - ADB_INSTALL_TIMEOUT=8
 
 android:
   components:
      - tools
-     - build-tools-26.0.2
+     - build-tools-27.0.1
      - platform-tools
      - extra-android-m2repository
      - extra-google-android-support
-     - android-26
+     - android-27
 
 licenses:
     - 'android-sdk-preview-license-.+'
