--- a/gradle-scripts/dependencies.gradle
+++ b/gradle-scripts/dependencies.gradle
@@ -1,16 +1,16 @@
 ext {
 
   //Version
-  supportVersion = '26+'
+  supportVersion = '27.0.1'
 
-  rxJavaVersion = '2.0.2'
+  rxJavaVersion = '2.1.5'
   rxAndroidVersion = '2.0.1'
 
   circleImageVersion = '1.3.0'
-  butterknifeVersion = '8.4.0'
+  butterknifeVersion = '8.8.1'
 
   picassoVersion = '2.5.2'
-  daggerVersion = '2.8'
+  daggerVersion = '2.13'
 
   javaxVersion = '1.0'
 
@@ -52,8 +52,7 @@ ext {
   //Dagger Libraries dependencies
   daggerDependencies = [
       dagger           : buildDependency(daggerPackage, 'dagger', daggerVersion),
-      daggerCompiler   : buildDependency(daggerPackage, 'dagger-compiler', daggerVersion),
-      daggerAnnotations: buildDependency(javaxPackage, 'jsr250-api', javaxVersion)]
+      daggerCompiler   : buildDependency(daggerPackage, 'dagger-compiler', daggerVersion)]
 
 
 
