--- a/gradle-scripts/dependencies.gradle
+++ b/gradle-scripts/dependencies.gradle
@@ -1,67 +1,66 @@
 ext {
 
-  supportVersion = '28.0.0'
+    androidXVersion = '1.0.0'
 
-  rxJavaVersion = '2.2.8'
-  rxAndroidVersion = '2.1.0'
+    rxJavaVersion = '2.2.8'
+    rxAndroidVersion = '2.1.0'
 
-  circleImageVersion = '1.3.0'
-  butterknifeVersion = '8.8.1'
+    circleImageVersion = '1.3.0'
+    butterknifeVersion = '10.1.0'
 
-  picassoVersion = '2.5.2'
-  daggerVersion = '2.13'
+    picassoVersion = '2.5.2'
+    daggerVersion = '2.13'
 
-  javaxVersion = '1.0'
+    junitVersion = '4.12'
+    mockitoVersion = '1.10.19'
+    hamcrestVersion = '1.1'
+    robolectricVersion = '3.0'
+    gsonVersion = '2.8.0'
 
-  junitVersion = '4.12'
-  mockitoVersion = '1.10.19'
-  hamcrestVersion = '1.1'
-  robolectricVersion = '3.0'
-  gsonVersion = '2.8.0'
+    supportPackage = 'com.android.support'
 
-  supportPackage = 'com.android.support'
+    reactivePackage = 'io.reactivex.rxjava2'
 
-  reactivePackage = 'io.reactivex.rxjava2'
+    hdodenhofPackage = 'de.hdodenhof'
+    jakeWhartonPackage = 'com.jakewharton'
+    picassoPackage = 'com.squareup.picasso'
 
-  hdodenhofPackage = 'de.hdodenhof'
-  jakeWhartonPackage = 'com.jakewharton'
-  picassoPackage = 'com.squareup.picasso'
+    daggerPackage = 'com.google.dagger'
+    javaxPackage = 'javax.annotation'
+    gsonPackage = 'com.google.code.gson'
 
-  daggerPackage = 'com.google.dagger'
-  javaxPackage = 'javax.annotation'
-  gsonPackage = 'com.google.code.gson'
+    junitPackage = 'junit'
+    mockitoPackage = 'org.mockito'
+    hamcrestPackage = 'org.hamcrest'
+    robolectricPackage = 'org.robolectric'
 
-  junitPackage = 'junit'
-  mockitoPackage = 'org.mockito'
-  hamcrestPackage = 'org.hamcrest'
-  robolectricPackage = 'org.robolectric'
+    androidXdependencies = [
+            material  : buildDependency('com.google.android.material', 'material', '1.0.0'),
+            annotation: buildDependency('androidx.annotation', 'annotation', androidXVersion),
+            appCompat : buildDependency('androidx.appcompat', 'appcompat', androidXVersion)
+    ]
 
-  supportDependencies = [
-      design           : buildDependency(supportPackage, 'design', supportVersion),
-      appCompat        : buildDependency(supportPackage, 'appcompat-v7', supportVersion),
-      supportAnnotation: buildDependency(supportPackage, 'support-annotations', supportVersion)]
+    rxDependencies = [
+            rxJava   : buildDependency(reactivePackage, 'rxjava', rxJavaVersion),
+            rxAndroid: buildDependency(reactivePackage, 'rxandroid', rxAndroidVersion)]
 
-  rxDependencies = [
-      rxJava   : buildDependency(reactivePackage, 'rxjava', rxJavaVersion),
-      rxAndroid: buildDependency(reactivePackage, 'rxandroid', rxAndroidVersion)]
+    daggerDependencies = [
+            dagger        : buildDependency(daggerPackage, 'dagger', daggerVersion),
+            daggerCompiler: buildDependency(daggerPackage, 'dagger-compiler', daggerVersion)]
 
-  daggerDependencies = [
-      dagger           : buildDependency(daggerPackage, 'dagger', daggerVersion),
-      daggerCompiler   : buildDependency(daggerPackage, 'dagger-compiler', daggerVersion)]
+    circleImageView = buildDependency(hdodenhofPackage, 'circleimageview', circleImageVersion)
+    butterknife = buildDependency(jakeWhartonPackage, 'butterknife', butterknifeVersion)
+    butterknifeProcessor = buildDependency(jakeWhartonPackage, 'butterknife-compiler', butterknifeVersion)
+    picasso = buildDependency(picassoPackage, 'picasso', picassoVersion)
+    gson = buildDependency(gsonPackage, 'gson', gsonVersion)
 
-  circleImageView = buildDependency(hdodenhofPackage, 'circleimageview', circleImageVersion)
-  butterknife = buildDependency(jakeWhartonPackage, 'butterknife', butterknifeVersion)
-  butterknifeProcessor = buildDependency(jakeWhartonPackage, 'butterknife-compiler', butterknifeVersion)
-  picasso = buildDependency(picassoPackage, 'picasso', picassoVersion)
-  gson = buildDependency(gsonPackage, 'gson', gsonVersion)
-
-  testingDependencies = [
-      junit      : buildDependency(junitPackage, 'junit', junitVersion),
-      mockito    : buildDependency(mockitoPackage, 'mockito-core', mockitoVersion),
-      robolectric: buildDependency(robolectricPackage, 'robolectric', robolectricVersion),
-      hamcrest   : buildDependency(hamcrestPackage, 'hamcrest-library', hamcrestVersion)]
+    testingDependencies = [
+            junit      : buildDependency(junitPackage, 'junit', junitVersion),
+            mockito    : buildDependency(mockitoPackage, 'mockito-core', mockitoVersion),
+            robolectric: buildDependency(robolectricPackage, 'robolectric', robolectricVersion),
+            hamcrest   : buildDependency(hamcrestPackage, 'hamcrest-library', hamcrestVersion)]
 }
 
 static String buildDependency(String pack, String dependency, String version) {
-  return "${pack}:${dependency}:${version}"
+    return "${pack}:${dependency}:${version}"
 }
