--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
 
   defaultConfig {
     applicationId "com.example.jhordan.euro_cleanarchitecture"
-    minSdkVersion 17
+    minSdkVersion 21
     targetSdkVersion 28
     versionCode 1
     versionName "1.0"
@@ -33,6 +33,10 @@ android {
   lintOptions {
     abortOnError false
   }
+
+  viewBinding {
+    enabled = true
+  }
 }
 
 dependencies {
@@ -46,9 +50,6 @@ dependencies {
 
   implementation rxDependencies.rxJava
   implementation rxDependencies.rxAndroid
-
-  implementation butterknife
-  annotationProcessor butterknifeProcessor
 
   implementation circleImageView
   implementation picasso
