--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
     </activity>
 
     <activity
-        android:name=".view.activity.TeamDetailsActivity"
+        android:name=".view.activity.TeamDetailActivity"
         android:theme="@style/AppTheme.NoActionBar"/>
   </application>
 
