--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ android:
   components:
      - tools
      - platform-tools
-     - build-tools-28.0.3
-     - android-28
+     - build-tools-29.0.2
+     - android-29
      - extra-android-support
      - extra-google-google_play_services
      - extra-google-m2repository
@@ -22,4 +22,4 @@ licenses:
     - 'google-gdk-license-.+'
 
 script:
-  - ./gradlew checkstyle assemble testDebug
+  - ./gradlew assemble testDebug
